[tool.poetry]
name = "hw09"
version = "0.1.0"
description = ""
authors = ["Alexey Vedmedev <al.vedmedev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.44"
alembic = "^1.8.1"
python-dotenv = "^0.21.0"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
